[gd_scene load_steps=2 format=3 uid="uid://bh3miegboitk1"]

[ext_resource type="Script" path="res://addons/basic_fsm/ui/property_editor/condition_triggers.gd" id="1_r223d"]

[node name="condition_triggers" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r223d")

[node name="CombinatorSelector" type="OptionButton" parent="."]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "AND"
popup/item_1/text = "OR"
popup/item_1/id = 1

[node name="TriggerSelector" type="OptionButton" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="EraseButton" type="Button" parent="."]
layout_mode = 2
text = "X"

[connection signal="item_selected" from="TriggerSelector" to="." method="_on_trigger_selector_item_selected"]
[connection signal="pressed" from="EraseButton" to="." method="_on_erase_button_pressed"]
